--- a/02-lint/node.npm/eslint.gitlab-ci.yml
+++ b/02-lint/node.npm/eslint.gitlab-ci.yml
@@ -16,7 +16,7 @@ eslint (lint):
     - |
       if [ "$GENERATE_REPORT" = 'true' ]; then
         echo "Uploading"
-        cat reports/lint.eslint.report.json
+        cat reports/lint.eslint.npm.report.json
       fi
   when: manual
   allow_failure: true
