--- a/04-sast/java/pmd.gitlab-ci.yml
+++ b/04-sast/java/pmd.gitlab-ci.yml
@@ -3,8 +3,9 @@ include:
 
 # PMD (https://github.com/pmd/pmd)
 pmd:
+  image:
+    name: registry.gitlab.com/dc20e6/devsecops/images/pmd:latest
   variables:
-    SAST_IMAGE: registry.gitlab.com/dc20e6/devsecops/images/pmd:latest
     SEARCH_MAX_DEPTH: 4
     PMD_LANGUAGE: java
     PMD_LANGUAGE_RULESETS: rulesets
