--- a/04-sast/disabled/bearer.gitlab-ci.yml
+++ b/04-sast/disabled/bearer.gitlab-ci.yml
@@ -3,8 +3,9 @@ include:
 
 # bearer (https://github.com/Bearer/bearer)
 bearer:
+  image:
+    name: registry.gitlab.com/dc20e6/devsecops/images/bearer:latest
   variables:
-    SAST_IMAGE: registry.gitlab.com/dc20e6/devsecops/images/bearer:latest
     SEARCH_MAX_DEPTH: 4
   extends:
     - ".sast_base"
