--- a/04-sast/mobile/mobsf-adnroid.gitlab-ci.yml
+++ b/04-sast/mobile/mobsf-adnroid.gitlab-ci.yml
@@ -2,8 +2,9 @@ include:
   - local: 'functions.gitlab-ci.yml'
 
 ".mobsf":
+  image:
+    name: registry.gitlab.com/dc20e6/devsecops/images/python:3.11.6-p9
   variables:
-    SAST_IMAGE: registry.gitlab.com/dc20e6/devsecops/images/python:3.11.6-p9
     SEARCH_MAX_DEPTH: 4
   extends:
     - ".sast_base"
@@ -15,9 +16,6 @@ include:
 
 # +
 mobsf-android:
-  variables:
-    SAST_IMAGE: registry.gitlab.com/dc20e6/devsecops/images/python:3.11.6-p9
-    SEARCH_MAX_DEPTH: 4
   extends:
     - ".mobsf"
   script:
