mkdir reports/ || true

--- a/04-sast/node.npm/nodejs-scan.gitlab-ci.yml
+++ b/04-sast/node.npm/nodejs-scan.gitlab-ci.yml
@@ -10,6 +10,7 @@ nodejs-scan:
     - ".sast_base"
   before_script:
     - pip install nodejsscan
+    - mkdir reports/ || true
   script:
     - njsscan
       --json
