--- a/04-sast/node.npm.gitlab-ci.yml
+++ b/04-sast/node.npm.gitlab-ci.yml
@@ -1,5 +1,5 @@
 include:
   - local: '04-sast/base/semgrep.gitlab-ci.yml'
-  - local: '04-sast/node.npm/eslint.gitlab-ci.yml'
+  # - local: '04-sast/node.npm/eslint.gitlab-ci.yml'
   - local: '04-sast/node.npm/nodejs-scan.gitlab-ci.yml'
   - local: '04-sast/node.npm/retire.gitlab-ci.yml'
