--- a/04-sast/node.npm/nodejs-scan.gitlab-ci.yml
+++ b/04-sast/node.npm/nodejs-scan.gitlab-ci.yml
@@ -12,7 +12,8 @@ nodejs-scan:
     - pip install nodejsscan
     - mkdir reports/ || true
   script:
-    - njsscan
+    # - njsscan
+    - nodejsscan
       --json
       -o reports/sast.nodejs-scan.npm.report.json
       .
