--- a/04-sast/node.npm/retire.gitlab-ci.yml
+++ b/04-sast/node.npm/retire.gitlab-ci.yml
@@ -12,11 +12,7 @@ retire:
     - npm install -g retire
     - mkdir reports/ || true
   script:
-    - retire
-      --path .
-      --colors
-      --outputformat json
-      --outputpath reports/sast.retire.npm.report.json
+    - retire --path . --colors --outputformat json --outputpath reports/sast.retire.npm.report.json
   after_script:
     - |
       if [ "$GENERATE_REPORT" = 'true' ]; then
