--- a/04-sast/node.npm/retire.gitlab-ci.yml
+++ b/04-sast/node.npm/retire.gitlab-ci.yml
@@ -13,6 +13,7 @@ retire:
     - mkdir reports/ || true
   script:
     - retire
+    - retire
       --path ./
       --colors
       --outputformat json
