--- a/03-audit/node.npm.gitlab-ci.yml
+++ b/03-audit/node.npm.gitlab-ci.yml
@@ -8,6 +8,7 @@ NPM Audit:
   image:
     name: "node:22.9.0-alpine3.20"
   script:
+    - apk add --no-cache git
     - npm audit --json > reports/audit.npm.json
   after_script:
     - echo "Uploading"
