--- a/03-audit/node.npm.gitlab-ci.yml
+++ b/03-audit/node.npm.gitlab-ci.yml
@@ -27,12 +27,12 @@ Forming CycloneDX SBOM (npm):
     SPEC_VERSION: "1.4"                       # (choices: "1.2", "1.3", "1.4", "1.5", "1.6")
     MC_TYPE: "application"                    # (choices: "application", "firmware", "library")
   before_script:
-    - apk add --no-cache git
     - npm install --global @cyclonedx/cyclonedx-npm
     - mkdir reports/ || true
   script:
     - npm install
     - cyclonedx-npm
+      --package-lock-only $PACKAGE_LOCK_ONLY
       --spec-version $SPEC_VERSION
       --output-file reports/cdx-sbom.npm.json
       --mc-type $MC_TYPE
