--- a/02-lint/node.npm/eslint.gitlab-ci.yml
+++ b/02-lint/node.npm/eslint.gitlab-ci.yml
@@ -7,7 +7,7 @@ eslint (lint):
     - ".lint_base"
     - ".lint_rule"
   image:
-    name: node:22.9.0-alpine3.20
+    name: node:18-alpine
   variables:
     SEARCH_MAX_DEPTH: 4
   before_script:
