--- a/03-audit/node.npm.gitlab-ci.yml
+++ b/03-audit/node.npm.gitlab-ci.yml
@@ -6,7 +6,7 @@ NPM Audit:
     - ".audit_src_base"
     - ".audit_rule"
   image:
-    name: "node:22.9.0-alpine3.20"
+    name: "node:18-alpine"
   script:
     - apk add --no-cache git
     - npm audit --json > reports/audit.npm.json
@@ -20,7 +20,7 @@ Forming CycloneDX SBOM (npm):
     - ".audit_src_base"
     - ".audit_rule"
   image:
-    name: "node:22.9.0-alpine3.20"
+    name: "node:18-alpine"
   variables:
     # PACKAGE_LOCK_ONLY: "true"
     PACKAGE_LOCK_ONLY: "false"
@@ -51,7 +51,7 @@ Forming CycloneDX SBOM (npm):
 #     OUTPUT_FILE: "reports/cdx-sbom.npm.json"
 #     MC_TYPE: "application"                    # (choices: "application", "firmware", "library")
 #   image:
-#     name: "node:22.9.0-alpine3.20"
+#     name: "node:18-alpine"
 #   before_script:
 #     - npx --package @cyclonedx/cyclonedx-npm --call exit
 #     - npx @cyclonedx/cyclonedx-npm --help
@@ -72,7 +72,7 @@ Forming CycloneDX SBOM (npm):
 #     SPEC_VERSION: "1.4"                        # (choices: "1.2", "1.3", "1.4", "1.5", "1.6")
 #     OUTPUT_FILE: "reports/cdx-sbom.npm.json"
 #   image:
-#     name: "node:22.9.0-alpine3.20"
+#     name: "node:18-alpine"
 #   before_script:
 #     - npm install -g npm@latest
 #     - npm sbom --help
