--- a/03-audit/node.yarn.gitlab-ci.yml
+++ b/03-audit/node.yarn.gitlab-ci.yml
@@ -10,7 +10,7 @@ Forming CycloneDX SBOM (yarn):
     - ".audit_src_base"
     - ".audit_rule"
   image:
-    name: "node:22.9.0-alpine3.20"
+    name: "node:18-alpine"
   variables:
     SPEC_VERSION: "1.4"                       # (choices: "1.2", "1.3", "1.4", "1.5", "1.6")
     MC_TYPE: "application"                    # (choices: "application", "firmware", "library")
@@ -36,7 +36,7 @@ Forming CycloneDX SBOM (yarn):
 #     OUTPUT_FILE: "reports/cdx-sbom.yarn.json"
 #     MC_TYPE: "application"                    # (choices: "application", "firmware", "library")
 #   image:
-#     name: "node:22.9.0-alpine3.20"
+#     name: "node:18-alpine"
 #   before_script:
 #     - yarn add --dev @cyclonedx/yarn-plugin-cyclonedx
 #     - yarn exec cyclonedx-yarn --help
@@ -54,7 +54,7 @@ Forming CycloneDX SBOM (yarn):
 #     OUTPUT_FILE: "reports/cdx-sbom.yarn.json"
 #     MC_TYPE: "application"                    # (choices: "application", "firmware", "library")
 #   image:
-#     name: "node:22.9.0-alpine3.20"
+#     name: "node:18-alpine"
 #   before_script:
 #     - yarn plugin import https://github.com/CycloneDX/cyclonedx-node-yarn/releases/latest/download/yarn-plugin-cyclonedx.cjs
 #     - yarn cyclonedx --help
