--- a/functions.gitlab-ci.yml
+++ b/functions.gitlab-ci.yml
@@ -60,9 +60,11 @@ stages:
   rules:
     - if: $CI_COMMIT_REF_NAME == $SECURITY_BRANCH
     - if: '$CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH && $RULES_ALLOW_FAILURE_ON_TEST_ON_DEFAULT_BRANCH == "true"'
+      when: manual
       allow_failure: true
     # disallow failures on feature-branches when RULES_ALLOW_FAILURE_ON_TEST_ON_DEFAULT_BRANCH == false
     - if: '$CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH && $RULES_ALLOW_FAILURE_ON_TEST_ON_DEFAULT_BRANCH == "false"'
+      when: manual
       allow_failure: false
 
 ".secrets_rule":
@@ -72,10 +74,12 @@ stages:
       variables:
         GENERATE_REPORT: "true"
       allow_failure: true
+      when: manual
     - if: '$CI_COMMIT_REF_NAME == $SECURITY_BRANCH && $RULES_ALLOW_FAILURE_ON_TEST_ON_DEFAULT_BRANCH == "false"'
       variables:
         GENERATE_REPORT: "true"
       allow_failure: false
+      when: manual
 
 ".lint_rule":
   rules:
@@ -84,10 +88,12 @@ stages:
       variables:
         GENERATE_REPORT: "true"
       allow_failure: true
+      when: manual
     - if: '$CI_COMMIT_REF_NAME == $SECURITY_BRANCH && $RULES_ALLOW_FAILURE_ON_TEST_ON_DEFAULT_BRANCH == "false"'
       variables:
         GENERATE_REPORT: "true"
       allow_failure: false
+      when: manual
 
 ".audit_rule":
   rules:
@@ -98,10 +104,12 @@ stages:
       variables:
         GENERATE_REPORT: "true"
       allow_failure: true
+      when: manual
     - if: '$CI_COMMIT_REF_NAME == $SECURITY_BRANCH && $RULES_ALLOW_FAILURE_ON_TEST_ON_DEFAULT_BRANCH == "false"'
       variables:
         GENERATE_REPORT: "true"
       allow_failure: false
+      when: manual
 
 ".audit_rule_mr":
   rules:
@@ -115,10 +123,12 @@ stages:
       variables:
         GENERATE_REPORT: "true"
       allow_failure: true
+      when: manual
     - if: '$CI_COMMIT_REF_NAME == $SECURITY_BRANCH && $RULES_ALLOW_FAILURE_ON_TEST_ON_DEFAULT_BRANCH == "false"'
       variables:
         GENERATE_REPORT: "true"
       allow_failure: false
+      when: manual
 
 ".dast_rule":
   rules:
@@ -128,7 +138,9 @@ stages:
       variables:
         GENERATE_REPORT: "true"
       allow_failure: true
+      when: manual
     - if: '$CI_COMMIT_REF_NAME == $SECURITY_BRANCH && $RULES_ALLOW_FAILURE_ON_TEST_ON_DEFAULT_BRANCH == "false"'
       variables:
         GENERATE_REPORT: "true"
       allow_failure: false
+      when: manual
