--- a/functions.gitlab-ci.yml
+++ b/functions.gitlab-ci.yml
@@ -58,28 +58,32 @@ stages:
 
 ".security_rule":
   rules:
-    - if: $CI_COMMIT_REF_NAME == $SECURITY_BRANCH
-    - if: '$CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH && $RULES_ALLOW_FAILURE_ON_TEST_ON_DEFAULT_BRANCH == "true"'
+    - if: '$CI_COMMIT_BRANCH == $SECURITY_BRANCH && $RULES_ALLOW_FAILURE_ON_TEST_ON_DEFAULT_BRANCH == "true"'
+      variables:
+        GENERATE_REPORT: "true"
       when: manual
       allow_failure: true
     # disallow failures on feature-branches when RULES_ALLOW_FAILURE_ON_TEST_ON_DEFAULT_BRANCH == false
-    - if: '$CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH && $RULES_ALLOW_FAILURE_ON_TEST_ON_DEFAULT_BRANCH == "false"'
+    - if: '$CI_COMMIT_BRANCH == $SECURITY_BRANCH && $RULES_ALLOW_FAILURE_ON_TEST_ON_DEFAULT_BRANCH == "false"'
+      variables:
+        GENERATE_REPORT: "true"
       when: manual
       allow_failure: false
 
 ".secrets_rule":
   rules:
     - if: $CI_PIPELINE_SOURCE == "merge_request_event"
-    - if: '$CI_COMMIT_REF_NAME == $SECURITY_BRANCH && $RULES_ALLOW_FAILURE_ON_TEST_ON_DEFAULT_BRANCH == "true"'
-      variables:
-        GENERATE_REPORT: "true"
-      allow_failure: true
-      when: manual
-    - if: '$CI_COMMIT_REF_NAME == $SECURITY_BRANCH && $RULES_ALLOW_FAILURE_ON_TEST_ON_DEFAULT_BRANCH == "false"'
-      variables:
-        GENERATE_REPORT: "true"
-      allow_failure: false
-      when: manual
+    - !reference [.security_rule, rules]
+    # - if: '$CI_COMMIT_REF_NAME == $SECURITY_BRANCH && $RULES_ALLOW_FAILURE_ON_TEST_ON_DEFAULT_BRANCH == "true"'
+    #   variables:
+    #     GENERATE_REPORT: "true"
+    #   allow_failure: true
+    #   when: manual
+    # - if: '$CI_COMMIT_REF_NAME == $SECURITY_BRANCH && $RULES_ALLOW_FAILURE_ON_TEST_ON_DEFAULT_BRANCH == "false"'
+    #   variables:
+    #     GENERATE_REPORT: "true"
+    #   allow_failure: false
+    #   when: manual
 
 ".lint_rule":
   rules:
