--- a/functions.gitlab-ci.yml
+++ b/functions.gitlab-ci.yml
@@ -63,7 +63,6 @@ stages:
         GENERATE_REPORT: "true"
       when: manual
       allow_failure: true
-    # disallow failures on feature-branches when RULES_ALLOW_FAILURE_ON_TEST_ON_DEFAULT_BRANCH == false
     - if: '$CI_COMMIT_BRANCH == $SECURITY_BRANCH && $RULES_ALLOW_FAILURE_ON_TEST_ON_DEFAULT_BRANCH == "false"'
       variables:
         GENERATE_REPORT: "true"
@@ -74,46 +73,18 @@ stages:
   rules:
     - if: $CI_PIPELINE_SOURCE == "merge_request_event"
     - !reference [.security_rule, rules]
-    # - if: '$CI_COMMIT_REF_NAME == $SECURITY_BRANCH && $RULES_ALLOW_FAILURE_ON_TEST_ON_DEFAULT_BRANCH == "true"'
-    #   variables:
-    #     GENERATE_REPORT: "true"
-    #   allow_failure: true
-    #   when: manual
-    # - if: '$CI_COMMIT_REF_NAME == $SECURITY_BRANCH && $RULES_ALLOW_FAILURE_ON_TEST_ON_DEFAULT_BRANCH == "false"'
-    #   variables:
-    #     GENERATE_REPORT: "true"
-    #   allow_failure: false
-    #   when: manual
 
 ".lint_rule":
   rules:
     - if: $CI_PIPELINE_SOURCE == "merge_request_event"
-    - if: '$CI_COMMIT_REF_NAME == $SECURITY_BRANCH && $RULES_ALLOW_FAILURE_ON_TEST_ON_DEFAULT_BRANCH == "true"'
-      variables:
-        GENERATE_REPORT: "true"
-      allow_failure: true
-      when: manual
-    - if: '$CI_COMMIT_REF_NAME == $SECURITY_BRANCH && $RULES_ALLOW_FAILURE_ON_TEST_ON_DEFAULT_BRANCH == "false"'
-      variables:
-        GENERATE_REPORT: "true"
-      allow_failure: false
-      when: manual
+    - !reference [.security_rule, rules]
 
 ".audit_rule":
   rules:
     - if: $CI_PIPELINE_SOURCE == "merge_request_event"
       variables:
         GENERATE_REPORT: "false"
-    - if: '$CI_COMMIT_REF_NAME == $SECURITY_BRANCH && $RULES_ALLOW_FAILURE_ON_TEST_ON_DEFAULT_BRANCH == "true"'
-      variables:
-        GENERATE_REPORT: "true"
-      allow_failure: true
-      when: manual
-    - if: '$CI_COMMIT_REF_NAME == $SECURITY_BRANCH && $RULES_ALLOW_FAILURE_ON_TEST_ON_DEFAULT_BRANCH == "false"'
-      variables:
-        GENERATE_REPORT: "true"
-      allow_failure: false
-      when: manual
+    - !reference [.security_rule, rules]
 
 ".audit_rule_mr":
   rules:
@@ -123,28 +94,10 @@ stages:
   rules:
     - if: "$SAST_DISABLED == 'true' || $SAST_DISABLED == '1'"
       when: never
-    - if: '$CI_COMMIT_REF_NAME == $SECURITY_BRANCH && $RULES_ALLOW_FAILURE_ON_TEST_ON_DEFAULT_BRANCH == "true"'
-      variables:
-        GENERATE_REPORT: "true"
-      allow_failure: true
-      when: manual
-    - if: '$CI_COMMIT_REF_NAME == $SECURITY_BRANCH && $RULES_ALLOW_FAILURE_ON_TEST_ON_DEFAULT_BRANCH == "false"'
-      variables:
-        GENERATE_REPORT: "true"
-      allow_failure: false
-      when: manual
+    - !reference [.security_rule, rules]
 
 ".dast_rule":
   rules:
     - if: "$DAST_DISABLED == 'true' || $DAST_DISABLED == '1'"
       when: never
-    - if: '$CI_COMMIT_REF_NAME == $SECURITY_BRANCH && $RULES_ALLOW_FAILURE_ON_TEST_ON_DEFAULT_BRANCH == "true"'
-      variables:
-        GENERATE_REPORT: "true"
-      allow_failure: true
-      when: manual
-    - if: '$CI_COMMIT_REF_NAME == $SECURITY_BRANCH && $RULES_ALLOW_FAILURE_ON_TEST_ON_DEFAULT_BRANCH == "false"'
-      variables:
-        GENERATE_REPORT: "true"
-      allow_failure: false
-      when: manual
+    - !reference [.security_rule, rules]
