- !reference [.security_rule, rules]

--- a/04-sast/docker.image/trivy.gitlab-ci.yml
+++ b/04-sast/docker.image/trivy.gitlab-ci.yml
@@ -24,4 +24,4 @@ Trivy Image Scanning:
       when: never
     - if: "$SAST_DISABLED == 'true' || $SAST_DISABLED == '1'"
       when: never
-    - if: $CI_COMMIT_REF_NAME == $SECURITY_BRANCH
+    - !reference [.security_rule, rules]
