--- a/04-sast/base/semgrep.gitlab-ci.yml
+++ b/04-sast/base/semgrep.gitlab-ci.yml
@@ -28,4 +28,5 @@ Semgrep:
       when: never
     - if: "$SAST_DISABLED == 'true' || $SAST_DISABLED == '1'"
       when: never
-    - if: $CI_COMMIT_REF_NAME == $SECURITY_BRANCH
+    - !reference [.security_rule, rules]
+    - !reference [.security_rule, rules]
