--- a/04-sast/disabled.gitlab-ci.yml
+++ b/04-sast/disabled.gitlab-ci.yml
@@ -170,4 +170,4 @@ bearer:
     - if: "$SAST_DISABLED == 'true' || $SAST_DISABLED == '1'"
       when: never
     # - if: "$CI_COMMIT_BRANCH && $CI_PROJECT_REPOSITORY_LANGUAGES =~ /(javascript|typescript|ruby|php|go|python|java$|tsx)/"
-    - if: $CI_COMMIT_REF_NAME == $SECURITY_BRANCH
+    - !reference [.security_rule, rules]
