--- a/04-sast/go/gosec.gitlab-ci.yml
+++ b/04-sast/go/gosec.gitlab-ci.yml
@@ -25,4 +25,4 @@ Gosec:
     - if: "$SAST_DISABLED == 'true' || $SAST_DISABLED == '1'"
       when: never
     # - if: "$CI_COMMIT_BRANCH && $CI_PROJECT_REPOSITORY_LANGUAGES =~ /go/"
-    - if: $CI_COMMIT_REF_NAME == $SECURITY_BRANCH
+    - !reference [.security_rule, rules]
