--- a/04-sast/java/spotbugs.gitlab-ci.yml
+++ b/04-sast/java/spotbugs.gitlab-ci.yml
@@ -18,4 +18,4 @@ spotbugs:
     - if: "$SAST_DISABLED == 'true' || $SAST_DISABLED == '1'"
       when: never
     # - if: "$CI_COMMIT_BRANCH && $CI_PROJECT_REPOSITORY_LANGUAGES =~ /java$/"
-    - if: $CI_COMMIT_REF_NAME == $SECURITY_BRANCH
+    - !reference [.security_rule, rules]
