--- a/04-sast/node.npm/eslint.gitlab-ci.yml
+++ b/04-sast/node.npm/eslint.gitlab-ci.yml
@@ -26,4 +26,4 @@ eslint (sast):
     - if: "$SAST_DISABLED == 'true' || $SAST_DISABLED == '1'"
       when: never
     # - if: "$CI_COMMIT_BRANCH && $CI_PROJECT_REPOSITORY_LANGUAGES =~ /(javascript|typescript|jsx|tsx)/"
-    - if: $CI_COMMIT_REF_NAME == $SECURITY_BRANCH
+    - !reference [.security_rule, rules]
