--- a/04-sast/node.npm/nodejs-scan.gitlab-ci.yml
+++ b/04-sast/node.npm/nodejs-scan.gitlab-ci.yml
@@ -27,4 +27,4 @@ nodejs-scan:
     - if: "$SAST_DISABLED == 'true' || $SAST_DISABLED == '1'"
       when: never
     # - if: "$CI_COMMIT_BRANCH && $CI_PROJECT_REPOSITORY_LANGUAGES =~ /(javascript|typescript|jsx|tsx)/"
-    - if: $CI_COMMIT_REF_NAME == $SECURITY_BRANCH
+    - !reference [.security_rule, rules]
