--- a/04-sast/php/progpilot.gitlab-ci.yml
+++ b/04-sast/php/progpilot.gitlab-ci.yml
@@ -23,4 +23,4 @@ progpilot:
     - if: "$SAST_DISABLED == 'true' || $SAST_DISABLED == '1'"
       when: never
     # - if: "$CI_COMMIT_BRANCH && $CI_PROJECT_REPOSITORY_LANGUAGES =~ /php/"
-    - if: $CI_COMMIT_REF_NAME == $SECURITY_BRANCH
+    - !reference [.security_rule, rules]
