--- a/04-sast/python/bandit.gitlab-ci.yml
+++ b/04-sast/python/bandit.gitlab-ci.yml
@@ -26,4 +26,4 @@ Bandit:
       when: never
     - if: "$SAST_DISABLED == 'true' || $SAST_DISABLED == '1'"
       when: never
-    - if: $CI_COMMIT_REF_NAME == $SECURITY_BRANCH
+    - !reference [.security_rule, rules]
