--- a/04-sast/docker.image/grype.gitlab-ci.yml
+++ b/04-sast/docker.image/grype.gitlab-ci.yml
@@ -33,6 +33,4 @@ Grype Image Scanning:
   rules:
     - if: "$SAST_EXCLUDED_ANALYZERS =~ /Grype Image Scanning/"
       when: never
-    - if: "$SAST_DISABLED == 'true' || $SAST_DISABLED == '1'"
-      when: never
-    - !reference [.security_rule, rules]
+    - !reference [.sast_rule, rules]
