--- a/04-sast/node.npm/nodejs-scan.gitlab-ci.yml
+++ b/04-sast/node.npm/nodejs-scan.gitlab-ci.yml
@@ -24,7 +24,5 @@ nodejs-scan:
   rules:
     - if: "$SAST_EXCLUDED_ANALYZERS =~ /nodejs-scan/"
       when: never
-    - if: "$SAST_DISABLED == 'true' || $SAST_DISABLED == '1'"
-      when: never
     # - if: "$CI_COMMIT_BRANCH && $CI_PROJECT_REPOSITORY_LANGUAGES =~ /(javascript|typescript|jsx|tsx)/"
-    - !reference [.security_rule, rules]
+    - !reference [.sast_rule, rules]
