--- a/04-sast/ruby/brakeman.gitlab-ci.yml
+++ b/04-sast/ruby/brakeman.gitlab-ci.yml
@@ -22,7 +22,5 @@ Brakeman:
   rules:
     - if: "$SAST_EXCLUDED_ANALYZERS =~ /brakeman/"
       when: never
-    - if: "$SAST_DISABLED == 'true' || $SAST_DISABLED == '1'"
-      when: never
     # - if: "$CI_COMMIT_BRANCH && $CI_PROJECT_REPOSITORY_LANGUAGES =~ /ruby/"
-    - !reference [.security_rule, rules]
+    - !reference [.sast_rule, rules]
