--- a/04-sast/base/semgrep.gitlab-ci.yml
+++ b/04-sast/base/semgrep.gitlab-ci.yml
@@ -26,6 +26,4 @@ Semgrep:
   rules:
     - if: "$SAST_EXCLUDED_ANALYZERS =~ /semgrep/"
       when: never
-    - if: "$SAST_DISABLED == 'true' || $SAST_DISABLED == '1'"
-      when: never
-    - !reference [.security_rule, rules]
+    - !reference [.sast_rule, rules]
