--- a/04-sast/java.gradle/spotbugs.gitlab-ci.yml
+++ b/04-sast/java.gradle/spotbugs.gitlab-ci.yml
@@ -15,7 +15,5 @@ spotbugs:
   rules:
     - if: "$SAST_EXCLUDED_ANALYZERS =~ /spotbugs/"
       when: never
-    - if: "$SAST_DISABLED == 'true' || $SAST_DISABLED == '1'"
-      when: never
     # - if: "$CI_COMMIT_BRANCH && $CI_PROJECT_REPOSITORY_LANGUAGES =~ /java$/"
-    - !reference [.security_rule, rules]
+    - !reference [.sast_rule, rules]
