--- a/04-sast/java.maven/cpd.gitlab-ci.yml
+++ b/04-sast/java.maven/cpd.gitlab-ci.yml
@@ -21,7 +21,5 @@ cpd:
   rules:
     - if: "$SAST_EXCLUDED_ANALYZERS =~ /cpd/"
       when: never
-    - if: "$SAST_DISABLED == 'true' || $SAST_DISABLED == '1'"
-      when: never
     # - if: "$CI_COMMIT_BRANCH && $CI_PROJECT_REPOSITORY_LANGUAGES =~ /java$/"
-    - !reference [.security_rule, rules]
+    - !reference [.sast_rule, rules]
