--- a/04-sast/node.yarn/eslint.gitlab-ci.yml
+++ b/04-sast/node.yarn/eslint.gitlab-ci.yml
@@ -23,7 +23,5 @@ eslint (sast):
   rules:
     - if: "$SAST_EXCLUDED_ANALYZERS =~ /eslint/"
       when: never
-    - if: "$SAST_DISABLED == 'true' || $SAST_DISABLED == '1'"
-      when: never
     # - if: "$CI_COMMIT_BRANCH && $CI_PROJECT_REPOSITORY_LANGUAGES =~ /(javascript|typescript|jsx|tsx)/"
-    - !reference [.security_rule, rules]
+    - !reference [.sast_rule, rules]
