--- a/04-sast/python/bandit.gitlab-ci.yml
+++ b/04-sast/python/bandit.gitlab-ci.yml
@@ -24,6 +24,4 @@ Bandit:
   rules:
     - if: "$SAST_EXCLUDED_ANALYZERS =~ /bandit/"
       when: never
-    - if: "$SAST_DISABLED == 'true' || $SAST_DISABLED == '1'"
-      when: never
-    - !reference [.security_rule, rules]
+    - !reference [.sast_rule, rules]
